--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "redux-api-token-middleware",
   "version": "0.0.4",
   "description": "A redux middleware for token base API endpoint, will help you request token and save it to local storage before fetching actual endpoint.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-dist": "`npm bin`/babel src -d dist"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,9 @@
     "axios": "^0.16.2",
     "jsonwebtoken": "^8.0.1",
     "moment": "^2.18.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.0"
   }
 }
